--- a/css/main.css
+++ b/css/main.css
@@ -1438,9 +1438,10 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-right: -8px;
+  margin-bottom: 40px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 50px;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
@@ -1448,15 +1449,32 @@ ul {
 
 @media screen and (min-width: 768px) {
   .exemples-set {
+    margin-bottom: 30px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .exemples-set {
+    margin-bottom: 50px;
+  }
+}
+
+.exemples-set__item {
+  margin-bottom: 15px;
+}
+
 .exemples-set__item:not(:last-child) {
   margin-right: 8px;
   padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .exemples-set__item {
+    margin-bottom: 0;
+  }
 }
 
 .exemples-set__button {
