--- a/sass/components/_exemples-set.scss
+++ b/sass/components/_exemples-set.scss
@@ -1,16 +1,31 @@
 .exemples-set {
   display: flex;
+  margin-right: -8px;
+  margin-bottom: 40px;
   flex-wrap: wrap;
-  margin-bottom: 50px;
+
   justify-content: flex-start;
 
   @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
     justify-content: center;
   }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
-.exemples-set__item:not(:last-child) {
-  margin-right: 8px;
-  padding: 0;
+.exemples-set__item {
+  margin-bottom: 15px;
+
+  &:not(:last-child) {
+    margin-right: 8px;
+    padding: 0;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
 }
 .exemples-set__button {
   font-weight: 500;
