--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,32 +4,32 @@
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/background-heder-480-1x.jpg);
+    url(../images/background-heder-480-1x.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/background-heder-480-2x.jpg);
+      url(../images/background-heder-480-2x.jpg);
   }
 
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/background-heder-768-1x.jpg);
+      url(../images/background-heder-768-1x.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/background-heder-768-2x.jpg);
+        url(../images/background-heder-768-2x.jpg);
     }
   }
   @media screen and (min-width: 1200px) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/background-heder-1600-1x.jpg);
+      url(../images/background-heder-1600-1x.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/background-heder-1600-2x.jpg);
+        url(../images/background-heder-1600-2x.jpg);
     }
   }
 }
